--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
   "dependencies": {
-    "flowbite": "^2.3.0"
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^8.0.4",
+    "@rails/actioncable": "^7.1.3-2",
+    "@wizardhealth/stimulus-multiselect": "^1.0.0",
+    "cable_ready": "^5.0.3",
+    "esbuild": "^0.20.2",
+    "flowbite": "^2.3.0",
+    "flowbite-datepicker": "^1.2.6",
+    "morphdom": "^2.7.2",
+    "stimulus_reflex": "^3.5.0-rc4",
+    "tailwindcss": "^3.4.3"
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
   }
 }
